15.12, Lab 5 done